# foss4g-2023-traffic-speed-model

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  sample.env
config/: aois.json  config_aois_allcities.json  config_aois_sample.json
config/modelling/: model_features_speed_kph_mean.json  model_features_speed_kph_p50.json  model_features_speed_kph_p85.json  model_tilesize.json  model_time.json
config/preprocessing/: config_allcities.json
traffic_speed_model/: export.py  modelling.py  prediction.py  preprocessing.py  test.py  utils.py
traffic_speed_model/batch/: batch_export.sh  batch_modelling.sh  batch_prediction.sh  batch_preprocessing.sh
traffic_speed_model/preprocessing/: centrality.py  edges.py  twitter.py  twitter_points.py  uber.py
